# Novato

./: .gitignore  CHANGELOG.md  CONVERSATION.md  DOCUMENTATION.md  LICENSE  PKGBUILD  PROGRESS.md  README.md  USERMANUAL.md  pyproject.toml
novato/: __init__.py  cheat.py  config.py  detector.py  downloader.py  executor.py  howto.py  installed.py  intent.py  intent_map.py  learner.py  logger.py  main.py  presenter.py  ranker.py  rules.py  safety.py  searcher.py  setup_wizard.py  storage.py  storage_analyzer.py  switcher.py  sysinfo.py  task_intent.py  teacher.py  watcher.py
novato/backends/: __init__.py  basic_backend.py  groq_backend.py  llamafile_backend.py  router.py
scripts/: install.sh  uninstall.sh
tests/: test_backends.py  test_cheat.py  test_config.py  test_detector.py  test_downloader.py  test_howto.py  test_installed.py  test_intent.py  test_learner.py  test_main.py  test_phase4.py  test_router.py  test_safety.py  test_searcher.py  test_setup.py  test_storage.py  test_storage_analyzer.py  test_sysinfo.py  test_teacher.py  test_watcher.py
