[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novato"
version = "0.1.0"
description = "A Linux terminal companion: install by intent, catch errors, learn as you go."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Novato contributors" }]
keywords = [
    "linux", "package-manager", "cli", "beginner",
    "natural-language", "pacman", "apt", "dnf",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Installation/Setup",
    "Topic :: Utilities",
]

# Runtime dependencies. The core tool stays lightweight; the heavy AI tiers
# (llamafile model, Groq) are optional and downloaded/configured at runtime.
dependencies = [
    "click>=8.1",      # CLI argument parsing and commands
    "rich>=13.0",      # Terminal UI: colours, spinners, panels, progress bars
    "distro>=1.8",     # Robust /etc/os-release parsing (stdlib fallback exists)
    "requests>=2.28",  # AUR REST API and Groq HTTP calls
    "psutil>=5.9",     # RAM detection for llamafile model selection
]

[project.urls]
Homepage = "https://github.com/novato-cli/novato"
Repository = "https://github.com/novato-cli/novato"
Documentation = "https://github.com/novato-cli/novato/blob/main/DOCUMENTATION.md"

[project.scripts]
novato = "novato.main:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[dependency-groups]
# uv-native dev group; `uv sync` installs these by default.
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["novato"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
